--- a/sparks/doc/Doxyfile.in
+++ b/sparks/doc/Doxyfile.in
@@ -1,5 +1,5 @@
 @INCLUDE = ../../../Doxyfile
 PROJECT_NAME = \"Sparks Effect\"
 PROJECT_NUMBER = 1.0
-QHP_NAMESPACE = com.taodyne.TaoPresentations.modules.Flares.1.0
-QHP_VIRTUAL_FOLDER = Flares
+QHP_NAMESPACE = com.taodyne.TaoPresentations.modules.Sparks.1.0
+QHP_VIRTUAL_FOLDER = Sparks 
